# pyhawkes

./: pyproject.toml  setup.py
examples/inference/: gibbs_ss_demo.py
pyhawkes/: models.py
pyhawkes/internals/: network.py  parents.py
pyhawkes/utils/: basis.py
