[build-system]
requires = [
  "setuptools>=61",
  "wheel",
  "numpy",
  "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyhawkes"
version = "0.3.1"
description = "Bayesian inference for network Hawkes processes"
authors = [
  { name = "Scott Linderman", email = "scott.linderman@gmail.com" },
  { name = "Enrico Trombetta", email = "trombetta-enricom@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "joblib",
  "scikit-learn",
  "pybasicbayes",
  "cython",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "http://www.github.com/slinderman/pyhawkes"

[tool.setuptools]
packages = ["pyhawkes", "pyhawkes.internals", "pyhawkes.utils"]
include-package-data = true
